Socials all pages

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Complete Data Sovereignty 🔒</h3>
+                    <h3>Complete Data Sovereignty</h3>
                     <p>Your data never leaves your infrastructure. Process sensitive information with confidence,
                         meeting the strictest compliance requirements for healthcare, finance, and government sectors.
                     </p>
@@ -80,7 +80,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Optimized for Edge Deployment ⚡</h3>
+                    <h3>Optimized for Edge Deployment</h3>
                     <p>Our models are specifically optimized to run on standard hardware. Get GPT-level performance
                         without expensive GPU clusters or cloud infrastructure.</p>
                 </div>
@@ -89,7 +89,7 @@
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Domain-Specific Fine-Tuning 🎯</h3>
+                    <h3>Domain-Specific Fine-Tuning</h3>
                     <p>Customize models for your specific use case. Whether it's medical diagnosis, legal analysis, or
                         technical documentation, create AI that speaks your language.</p>
                 </div>
@@ -144,9 +144,8 @@
         <div class="footer-bottom">
             <p>&copy; 2024 Soverly. All rights reserved.</p>
             <div class="social-links">
-                <a href="#" aria-label="Twitter">𝕏</a>
-                <a href="#" aria-label="LinkedIn">in</a>
-                <a href="#" aria-label="GitHub">⚙</a>
+                <a href="https://x.com/soverlyai" aria-label="X">𝕏</a>
+                <a href="https://linkedin.com/company/soverly" aria-label="LinkedIn">in</a>
             </div>
         </div>
     </footer>
@@ -155,5 +154,4 @@
     <script src="./js/index.js"></script>
     <script src="./js/about.js"></script>
 </body>
-
 </html>
