--- a/about.html
+++ b/about.html
@@ -128,9 +128,8 @@
         <div class="footer-bottom">
             <p>&copy; 2024 Soverly. All rights reserved.</p>
             <div class="social-links">
-                <a href="#" aria-label="Twitter">𝕏</a>
-                <a href="#" aria-label="LinkedIn">in</a>
-                <a href="#" aria-label="GitHub">⚙</a>
+                <a href="https://x.com/soverlyai" aria-label="X">𝕏</a>
+                <a href="https://linkedin.com/company/soverly" aria-label="LinkedIn">in</a>
             </div>
         </div>
     </footer>
