--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
                 <li><a href="index.html#use-cases">Use Cases</a></li>
                 <li><a href="about.html">Company</a></li>
                 <li><a href="contact.html" class="active">Contact</a></li>
-                <li><a href="#" class="nav-button">Get Started</a></li>
+                <li><a href="contact.html" class="nav-button">Get Started</a></li>
             </ul>
             <div class="mobile-menu" id="mobile-menu">
                 <span></span>
@@ -84,6 +84,7 @@
 
     <footer>
         <div class="footer-content">
+            <!--
             <div class="footer-column">
                 <h4>Product</h4>
                 <a href="#">Features</a>
@@ -98,13 +99,15 @@
                 <a href="#">Government</a>
                 <a href="#">Enterprise</a>
             </div>
+            --->
             <div class="footer-column">
                 <h4>Company</h4>
                 <a href="about.html">About</a>
-                <a href="#">Blog</a>
-                <a href="#">Careers</a>
+                <!-- <a href="#">Blog</a>
+                <a href="#">Careers</a> --->
                 <a href="contact.html">Contact</a>
             </div>
+            <!--
             <div class="footer-column">
                 <h4>Resources</h4>
                 <a href="#">Guides</a>
@@ -112,17 +115,16 @@
                 <a href="#">Whitepapers</a>
                 <a href="#">Support</a>
             </div>
+            --->
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Soverly. All rights reserved.</p>
             <div class="social-links">
-                <a href="#" aria-label="Twitter">𝕏</a>
-                <a href="#" aria-label="LinkedIn">in</a>
-                <a href="#" aria-label="GitHub">⚙</a>
+                <a href="https://x.com/soverlyai" aria-label="X">𝕏</a>
+                <a href="https://linkedin.com/company/soverly" aria-label="LinkedIn">in</a>
             </div>
         </div>
     </footer>
     <script src="js/main.js"></script>
 </body>
-
 </html>
