--- a/about.html
+++ b/about.html
@@ -12,9 +12,6 @@
         <nav>
             <a href="index.html"><img src="assets/logo.png" alt="Soverly Logo" class="logo"></a>
             <ul class="nav-links">
-                <li><a href="index.html#home">Products</a></li>
-                <li><a href="index.html#features">Solutions</a></li>
-                <li><a href="index.html#use-cases">Use Cases</a></li>
                 <li><a href="about.html" class="active">Company</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="contact.html" class="nav-button">Get Started</a></li>
@@ -35,12 +32,11 @@
         <div class="mv-grid">
             <div class="mv-card">
                 <h2>Our Vision</h2>
-                <p>To empower businesses and individuals with sovereign AI that runs locally, freeing them from cloud dependencies and privacy risks. We envision a world where AI enhances capabilities without compromising data sovereignty or requiring constant internet connectivity.</p>
+                <p>Distribute AI that runs locally, freeing businesses from cloud dependencies and privacy risks. We envision a world where AI enhances capabilities without compromising data sovereignty or requiring constant internet connectivity.</p>
             </div>
             <div class="mv-card">
                 <h2>Our Mission</h2>
-                <p>We create optimized machine learning models deployable on standard hardware, delivering enterprise-grade AI that's secure, customizable, and cost-effective. Our technology enables organizations to harness the full power of AI while maintaining complete control over their data and infrastructure.</p>
-            </div>
+                <p>Create optimized machine learning models deployable on standard hardware, delivering AI that's secure, customizable, and cost-effective.</p>
         </div>
     </section>
 
