--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
         <nav>
             <a href="index.html"><img src="assets/logo.png" alt="Soverly Logo" class="logo"></a>
             <ul class="nav-links">
-                <li><a href="index.html#home">Products</a></li>
-                <li><a href="index.html#features">Solutions</a></li>
-                <li><a href="index.html#use-cases">Use Cases</a></li>
                 <li><a href="about.html">Company</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <li><a href="contact.html" class="nav-button">Get Started</a></li>
@@ -32,11 +29,10 @@
     <section class="hero" id="home">
         <div class="grid-overlay"></div>
         <div class="hero-content">
-            <h1>Deploy <span class="gradient-text">Sovereign AI</span><br>On Your Infrastructure</h1>
-            <p class="subtitle">Run enterprise-grade language models locally with complete data sovereignty. No cloud
-                dependencies. No privacy concerns. Just powerful AI that you control.</p>
+            <h1>Your <span class="gradient-text">Sovereign AI</span><br>Your Infrastructure</h1>
+            <p class="subtitle">Models with data sovereignty. No cloud. No privacy concerns. AI that you control.</p>
             <div class="button-group">
-                <a href="contact.html" class="cta-button">Start Building →</a>
+                <a href="contact.html" class="cta-button">Let's Build →</a>
             </div>
         </div>
     </section>
@@ -63,14 +59,14 @@
     </section>
 
     <section class="timeline" id="features">
-        <h2>Built for the Enterprise Edge</h2>
+        <h2>Built for the Edge</h2>
         <div class="timeline-container">
             <div class="timeline-line"></div>
             <div class="timeline-progress" id="timeline-progress"></div>
 
             <div class="timeline-item">
                 <div class="timeline-content">
-                    <h3>Complete Data Sovereignty</h3>
+                    <h3>Data Sovereignty</h3>
                     <p>Your data never leaves your infrastructure. Process sensitive information with confidence,
                         meeting the strictest compliance requirements for healthcare, finance, and government sectors.
                     </p>
@@ -90,29 +86,12 @@
             <div class="timeline-item">
                 <div class="timeline-content">
                     <h3>Domain-Specific Fine-Tuning</h3>
-                    <p>Customize models for your specific use case. Whether it's medical diagnosis, legal analysis, or
+                    <p>Customize models for your specific use case. Whether it's quality assurance, legal analysis, or
                         technical documentation, create AI that speaks your language.</p>
                 </div>
                 <div class="timeline-dot"></div>
             </div>
         </div> 
-    </section>
-
-    <section class="use-cases" id="use-cases">
-        <div class="section-header">
-            <h2>Powering Critical Use Cases</h2>
-            <p>From healthcare to defense, organizations trust Soverly for mission-critical AI deployment</p>
-        </div>
-        <div class="use-cases-grid">
-            <div class="use-case-pill">Healthcare & Medical</div>
-            <div class="use-case-pill">Financial Services</div>
-            <div class="use-case-pill">Legal & Compliance</div>
-            <div class="use-case-pill">Defense & Security</div>
-            <div class="use-case-pill">Manufacturing</div>
-            <div class="use-case-pill">Research & Development</div>
-            <div class="use-case-pill">Government</div>
-            <div class="use-case-pill">Energy & Utilities</div>
-        </div>
     </section>
 
     <footer>
@@ -122,6 +101,7 @@
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </div>
+
         </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Soverly. All rights reserved.</p>
