--- a/index.html
+++ b/index.html
@@ -4,105 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Soverly - Sovereign AI for the Edge</title>
+    <title>Soverly | Redefining RFP bidding</title>
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/index.css">
+    <script src="https://getlaunchlist.com/js/widget.js" defer></script>
 </head>
 
 <body>
-    <header id="header">
-        <nav>
-            <a href="index.html"><img src="assets/logo.png" alt="Soverly Logo" class="logo"></a>
-            <ul class="nav-links">
-                <li><a href="about.html">Company</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="contact.html" class="nav-button">Get Started</a></li>
-            </ul>
-            <div class="mobile-menu" id="mobile-menu">
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-        </nav>
-    </header>
-
     <section class="hero" id="home">
         <div class="grid-overlay"></div>
         <div class="hero-content">
-            <h1>Your <span class="gradient-text">Sovereign AI</span><br>Your Infrastructure</h1>
-            <p class="subtitle">Models with data sovereignty. No cloud. No privacy concerns. AI that you control.</p>
-            <div class="button-group">
-                <a href="contact.html" class="cta-button">Let's Build →</a>
-            </div>
+            <h1><span class="gradient-text">Soverly</span><br>Coming Soon</h1>
+            <p class="subtitle">Enhance your RFP process with AI.</p>
+            <div class="launchlist-widget" data-key-id="nD5Su2" data-height="180px"></div>
         </div>
-    </section>
-
-    <section class="stats">
-        <div class="stats-container">
-            <div class="stat">
-                <div class="stat-number">100%</div>
-                <div class="stat-label">Data Privacy</div>
-            </div>
-            <div class="stat">
-                <div class="stat-number">50%</div>
-                <div class="stat-label">Cost Savings</div>
-            </div>
-            <div class="stat">
-                <div class="stat-number">30%</div>
-                <div class="stat-label">Productivity Boost</div>
-            </div>
-            <div class="stat">
-                <div class="stat-number">0</div>
-                <div class="stat-label">Cloud Dependencies</div>
-            </div>
-        </div>
-    </section>
-
-    <section class="timeline" id="features">
-        <h2>Built for the Edge</h2>
-        <div class="timeline-container">
-            <div class="timeline-line"></div>
-            <div class="timeline-progress" id="timeline-progress"></div>
-
-            <div class="timeline-item">
-                <div class="timeline-content">
-                    <h3>Data Sovereignty</h3>
-                    <p>Your data never leaves your infrastructure. Process sensitive information with confidence,
-                        meeting the strictest compliance requirements for healthcare, finance, and government sectors.
-                    </p>
-                </div>
-                <div class="timeline-dot"></div>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-content">
-                    <h3>Optimized for Edge Deployment</h3>
-                    <p>Our models are specifically optimized to run on standard hardware. Get GPT-level performance
-                        without expensive GPU clusters or cloud infrastructure.</p>
-                </div>
-                <div class="timeline-dot"></div>
-            </div>
-
-            <div class="timeline-item">
-                <div class="timeline-content">
-                    <h3>Domain-Specific Fine-Tuning</h3>
-                    <p>Customize models for your specific use case. Whether it's quality assurance, legal analysis, or
-                        technical documentation, create AI that speaks your language.</p>
-                </div>
-                <div class="timeline-dot"></div>
-            </div>
-        </div> 
     </section>
 
     <footer>
-        <div class="footer-content">
-            <div class="footer-column">
-                <h4>Company</h4>
-                <a href="#">About</a>
-                <a href="#">Contact</a>
-            </div>
-
-        </div>
         <div class="footer-bottom">
             <p>&copy; 2024 Soverly. All rights reserved.</p>
             <div class="social-links">
