--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Soverly | Redefining RFP bidding</title>
+    <!-- Google Font: Homenaje -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Homenaje&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/main.css">
     <link rel="stylesheet" href="css/index.css">
     <script src="https://getlaunchlist.com/js/widget.js" defer></script>
@@ -14,7 +18,7 @@
     <section class="hero" id="home">
         <div class="grid-overlay"></div>
         <div class="hero-content">
-            <h1><span class="gradient-text">Soverly</span><br>Coming Soon</h1>
+            <h1>Soverly<br>Coming Soon</h1>
             <p class="subtitle">Enhance your RFP process with AI.</p>
             <div class="launchlist-widget" data-key-id="nD5Su2" data-height="180px"></div>
         </div>
